--- a/glade/pca-follow.glade
+++ b/glade/pca-follow.glade
@@ -2,10 +2,50 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <object class="GtkAboutDialog" id="AboutDialog">
+    <property name="can_focus">False</property>
+    <property name="modal">True</property>
+    <property name="type_hint">dialog</property>
+    <property name="program_name">pca-follow</property>
+    <property name="version">v1.0</property>
+    <property name="comments" translatable="yes">Logiciel de suivi a posteriori des modifcations documentaires
+Aide à la comparaison de deux textes</property>
+    <property name="website">https://github.com/lpenaud/pca-follow/tree/master</property>
+    <property name="website_label" translatable="yes">Github</property>
+    <property name="authors">Loïc Penaud</property>
+    <property name="logo_icon_name">accessories-text-editor</property>
+    <signal name="close" handler="gtk_widget_destroy" swapped="no"/>
+    <signal name="response" handler="gtk_widget_destroy" swapped="no"/>
+    <child>
+      <placeholder/>
+    </child>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">pca-follow</property>
     <property name="icon_name">accessories-text-editor</property>
+    <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
     <child>
       <placeholder/>
     </child>
@@ -35,7 +75,7 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <signal name="activate" handler="open_ref" swapped="no"/>
+                        <signal name="activate" handler="open_cur" swapped="no"/>
                       </object>
                     </child>
                     <child>
@@ -43,9 +83,8 @@
                         <property name="label">gtk-open</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <signal name="activate" handler="open_cur" swapped="no"/>
+                        <signal name="activate" handler="open_ref" swapped="no"/>
                       </object>
                     </child>
                     <child>
@@ -79,7 +118,7 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <signal name="activate" handler="destroy" swapped="no"/>
+                        <signal name="activate" handler="gtk_main_quit" swapped="no"/>
                       </object>
                     </child>
                   </object>
